--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
           <img class="banner" src="images/banner.svg" alt="" />
         </div>
         <div class="col-md-12 col-lg-8 right_info">
+          
+          <div class="progress-bar-wrapper">
+            <div class="progress-title">
+              <h2><span>0%</span> concluído</h2>
+            </div>
+            <div class="progress">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="20"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 0%"
+              ></div>
+            </div>
+          </div>
+
           <form method="POST" action="#">
             <div class="swiper">
               <div class="swiper-wrapper">
@@ -114,6 +131,9 @@
                       Salvar e continuar
                     </button>
                   </div>
+                  <button class="skip-btn">
+                    SKIP<i class="fa-solid fa-forward"></i>
+                  </button>
                 </div>
 
                 <!-- Option -->
@@ -162,6 +182,9 @@
                       </label>
                     </ul>
                   </div>
+                  <button class="skip-btn">
+                    SKIP<i class="fa-solid fa-forward"></i>
+                  </button>
                 </div>
 
                 <!-- Option -->
@@ -219,8 +242,12 @@
                       </label>
                     </ul>
                   </div>
+                  <button class="skip-btn">
+                    SKIP<i class="fa-solid fa-forward"></i>
+                  </button>
                 </div>
-                <div class="swiper-slide last-slide">
+
+                <div class="option_section swiper-slide last-slide">
                   <h2>Informe o seu CNPJ</h2>
                   <div class="d-flex cnpj-input-wraper">
                     <input
@@ -248,6 +275,7 @@
                 <div class="swiper-slide"></div>
               </div>
             </div>
+
             <div class="toggle-btn">
               <div class="swiper-button-prev"></div>
               <div class="swiper-button-next"></div>
