--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
           <img class="banner" src="images/banner.svg" alt="" />
         </div>
         <div class="col-md-12 col-lg-8 right_info">
-          
           <div class="progress-bar-wrapper">
             <div class="progress-title">
               <h2><span>0%</span> concluído</h2>
@@ -67,7 +66,7 @@
             <div class="swiper">
               <div class="swiper-wrapper">
                 <!-- Option -->
-                <div class="option_section swiper-slide">
+                <div class="option_section swiper-slide first-slide">
                   <h2>Qual o seu ramo de atuação?</h2>
                   <p>Você pode selecionar mais de um item.</p>
                   <div class="options four">
